<resources>
    <string name="app_name">Fluxio</string>
    <string name="navigation_drawer_open">Open menu</string>
    <string name="navigation_drawer_close">Close menu</string>
    <string name="scanning">Scanning...</string>
    <string name="save">Save</string>
    <string name="history">History</string>
    <string name="devices">Devices</string>
    <string name="search_new_devices">Scan for new devices</string>
    <string name="no_wifi">You are not connected to WiFi!</string>
    <string name="scan_finished">Scan finished.</string>
    <string name="scan">Scan</string>
    <string name="no_saved_networks">No saved networks.</string>
    <string name="title_current">Fluxio: Current</string>
    <string name="title_saved">Fluxio: Saved</string>
    <string name="save_network">Save Network</string>
    <string name="enter_network_name">Enter name for this network:</string>
    <string name="hint_network_name">e.g. Home, Office...</string>
    <string name="name_already_exists">Name already exists!</string>
    <string name="saved">Saved!</string>
    <string name="delete_network">Delete Network</string>
    <string name="confirm_delete_network">Do you want to delete \u0027%1$s\u0027?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="close">Close</string>
    <string name="active">Active</string>
    <string name="inactive">Inactive</string>
    <string name="edit_device">Edit Device</string>
    <string name="delete_device">Delete Device</string>
    <string name="confirm_delete_device">Do you really want to delete this device?</string>
    <string name="updated">Updated</string>
    <string name="deleted">Deleted</string>
    <string name="ok">OK</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="no_ip">No IP address!</string>
    <string name="my_device">My Device</string>
    <string name="new_devices_found">Found %1$d new devices.</string>
    <string name="device_at">Device at %1$s</string>
    <string name="scan_network_toast">Scanning network...</string>
    <string name="shutdown">SHUTDOWN</string>
    <string name="power_on">POWER ON</string>
    <string name="setup_guide">Setup Guide</string>
    <string name="windows_setup">Windows Setup</string>
    <string name="linux_setup">Linux Setup</string>
    <string name="macos_setup">macOS Setup</string>
</resources>